Update GitHub Actions to v4 and remove .kiro directory
- Updated actions/upload-artifact from v3 to v4
- Updated actions/download-artifact from v3 to v4
- Updated actions/cache from v3 to v4
- Fixed artifact handling in release workflow
- Removed .kiro specs directory (not needed for production)

This fixes the GitHub Actions deprecation warnings and streamlines the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ovie Programming Language - Offline-First .gitignore
 # This file ensures no sensitive data or build artifacts go online
 
+# Kiro development artifacts (should not be deployed)
+.kiro/
+
 # Rust build artifacts
 /target/
 **/target/
