--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,19 +53,19 @@ jobs:
         targets: ${{ matrix.target }}
 
     - name: Cache cargo registry
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.cargo/registry
         key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
 
     - name: Cache cargo index
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.cargo/git
         key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
 
     - name: Cache cargo build
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: target
         key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
@@ -136,7 +136,7 @@ jobs:
         tar -czf ../ovie-${{ github.ref_name || github.event.inputs.version }}-${{ matrix.name }}.tar.gz ${{ matrix.name }}
 
     - name: Upload artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: ovie-${{ matrix.name }}
         path: |
@@ -154,12 +154,16 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Download all artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
 
     - name: Move artifacts to release directory
       run: |
         mkdir -p release-assets
-        find . -name "ovie-*.zip" -o -name "ovie-*.tar.gz" | xargs -I {} mv {} release-assets/
+        find . -name "ovie-*.zip" -o -name "ovie-*.tar.gz" | while read file; do
+          if [ -f "$file" ]; then
+            mv "$file" release-assets/
+          fi
+        done
 
     - name: Generate checksums
       run: |
