--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,11 +35,11 @@ jobs:
             name: linux-x64
             ext: ''
           - target: x86_64-apple-darwin
-            os: macos-latest
+            os: macos-13
             name: macos-x64
             ext: ''
           - target: aarch64-apple-darwin
-            os: macos-latest
+            os: macos-14
             name: macos-arm64
             ext: ''
 
@@ -51,6 +51,10 @@ jobs:
       uses: dtolnay/rust-toolchain@stable
       with:
         targets: ${{ matrix.target }}
+        components: rustfmt, clippy
+
+    - name: Install target
+      run: rustup target add ${{ matrix.target }}
 
     - name: Cache cargo registry
       uses: actions/cache@v4
@@ -75,6 +79,18 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential
+
+    - name: Install dependencies (Windows)
+      if: matrix.os == 'windows-latest' && matrix.target == 'x86_64-pc-windows-gnu'
+      run: |
+        # Install mingw-w64 for GNU target
+        choco install mingw -y
+
+    - name: Setup Xcode (macOS)
+      if: runner.os == 'macOS'
+      uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: latest-stable
 
     - name: Build release
       run: cargo build --release --target ${{ matrix.target }} --workspace
