🔧 Fix GitHub Actions Node.js version and VS Code extension dependencies
- Update Node.js version from 18 to 20 in all workflows
- Replace deprecated 'vsce' with '@vscode/vsce' package
- Update @types/node to version 20.x
- Remove deprecated 'onLanguage:ovie' activation event
- Fix VS Code extension build commands in workflows

This resolves the 'File is not defined' error and Node.js version compatibility issues.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -291,7 +291,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'
         cache: 'npm'
         cache-dependency-path: extensions/ovie-vscode/package-lock.json
 
@@ -303,9 +303,9 @@ jobs:
     - name: Build extension
       run: |
         cd extensions/ovie-vscode
-        npm install -g vsce
+        npm install -g @vscode/vsce
         npm run compile
-        vsce package
+        npx @vscode/vsce package
 
     - name: Upload extension artifact
       uses: actions/upload-artifact@v4
@@ -530,7 +530,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'
 
     - name: Deploy to Vercel
       run: |
