--- a/extensions/ovie-vscode/package.json
+++ b/extensions/ovie-vscode/package.json
@@ -30,7 +30,6 @@
     "natural language"
   ],
   "activationEvents": [
-    "onLanguage:ovie",
     "workspaceContains:**/*.ov",
     "workspaceContains:ovie.toml"
   ],
@@ -309,18 +308,18 @@
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
-    "package": "vsce package",
-    "publish": "vsce publish"
+    "package": "@vscode/vsce package",
+    "publish": "@vscode/vsce publish"
   },
   "devDependencies": {
-    "@types/node": "16.x",
+    "@types/node": "20.x",
     "@types/vscode": "^1.74.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "@vscode/test-electron": "^2.2.0",
     "eslint": "^8.28.0",
     "typescript": "^4.9.4",
-    "vsce": "^2.15.0"
+    "@vscode/vsce": "^2.22.0"
   },
   "dependencies": {
     "axios": "^1.6.0",
