--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,11 +100,11 @@ jobs:
             ext: .exe
             archive: zip
           - platform: macos-x64
-            os: macos-13
+            os: macos-15-intel
             ext: ''
             archive: tar.gz
           - platform: macos-arm64
-            os: macos-14
+            os: macos-latest
             ext: ''
             archive: tar.gz
 
