--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -13,6 +13,11 @@ on:
         type: boolean
         default: true
 
+permissions:
+  contents: write
+  packages: write
+  actions: read
+
 env:
   OVIE_VERSION: ${{ github.event.inputs.version }}
 
